# Eyethon

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
include/: microgd.h
src/: CMakeLists.txt  compile.rs  inference.rs  interpret.rs  lib.rs  main.c  main.rs  model.onnx  operator.c  operator.h  parse.rs  tokenize.c  tokenize.h  tokenize.rs  tokenizer.json  vm.rs
src/interpret/: interpret.rs  mod.rs  value.rs
tests/: README.md
